--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="container"></section>
+    <button id="darkMode"></button>
+    <section id="section" class="container"></section>
     <script src="js/script.js"></script>
 </body>
 </html>
