--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+<button id="mode" class="Mode">
 <body>
-    <button id="darkMode"></button>
+    <img  id="darkImage" class="Mode__Image" src="images/darkBtn.png" alt="">
+    <img  id="lightImage" class="Mode__Image hidden" src="images/lightBtn.png" alt="">
+</button>
     <section id="section" class="container"></section>
     <script src="js/script.js"></script>
 </body>
