Adding reset button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img  id="darkImage" class="Mode__Image" src="images/darkBtn.png" alt="">
     <img  id="lightImage" class="Mode__Image hidden" src="images/lightBtn.png" alt="">
 </button>
-<button id="reset">Reset</button>
+<button id="reset" class="efeito efeito-1">Reset</button>
     <section id="section" class="container"></section>
     <script src="js/script.js"></script>
 </body>
