--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
-<button id="mode" class="Mode">
+
 <body>
+<button id="mode" class="Mode">
     <img  id="darkImage" class="Mode__Image" src="images/darkBtn.png" alt="">
     <img  id="lightImage" class="Mode__Image hidden" src="images/lightBtn.png" alt="">
 </button>
     <section id="section" class="container"></section>
+
+    <button class="btn" id="discColor" data-choice="3">Change Color</button>
+
     <script src="js/script.js"></script>
 </body>
 </html>
