Add a responsive layout and some features

--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-<button id="mode" class="Mode">
-    <img  id="darkImage" class="Mode__Image" src="images/darkBtn.png" alt="">
-    <img  id="lightImage" class="Mode__Image hidden" src="images/lightBtn.png" alt="">
-</button>
-<button id="reset" class="efeito efeito-1">Reset</button>
+    <h1 class="title">LIG 4</h1>
     <section id="section" class="container"></section>
+    <p id="message"></p>
+    <div id="painel" class="painel">
+        <button id="reset" class="efeito efeito-1">Reset</button>
+        <button class="efeito efeito-1" id="discColor">Change Color</button>
+        <p id="ballMessage" class="text"></p>
+        <button id="mode" class="Mode">
+            <img  id="darkImage" class="Mode__Image" src="images/darkBtn.png" alt="">
+            <img  id="lightImage" class="Mode__Image hidden" src="images/lightBtn.png" alt="">
+        </button>
+    </div>
 
-    <button class="btn" id="discColor" data-choice="3">Change Color</button>
 
     <script src="js/script.js"></script>
 </body>
