Adjusting some features.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <h1 class="title">LIG 4</h1>
+    <p class="title title--hidden">The light atract bugs. plase use dark mode!</p>
     <section id="section" class="container"></section>
     <p id="message"></p>
     <div id="painel" class="painel">
         <button id="reset" class="efeito efeito-1">Reset</button>
-        <button class="efeito efeito-1" id="discColor">Change Color</button>
+        <button class="efeito efeito-1 efeito-1-changeColor" id="discColor">Change Color</button>
         <p id="ballMessage" class="text"></p>
         <button id="mode" class="Mode">
             <img  id="darkImage" class="Mode__Image" src="images/darkBtn.png" alt="">
