--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class="title">LIG 4</h1>
-    <p class="title title--hidden">The light atract bugs. plase use dark mode!</p>
+    <p class="title title--hidden">The light atract bugs. please use dark mode! (easter egg)</p>
     <section id="section" class="container"></section>
     <p id="message"></p>
     <div id="painel" class="painel">
